--- a/.github/workflows/python-formatter.yml
+++ b/.github/workflows/python-formatter.yml
@@ -1,10 +1,6 @@
 name: Format python code with black
 
-on: 
-  pull_request:
-      branches:
-        - main
-
+on: [push]
 
 jobs:
   format:
@@ -28,5 +24,20 @@ jobs:
           message: 'Committing black-format changes'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
+  lint:
+    runs-on: ubuntu-latest
+    needs: format
+    steps: 
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+      - name: Analysing the code with pylint
+        run: |
+          pylint $(git ls-files '*.py')
+      
 
         
