--- a/.github/workflows/python-formatter.yml
+++ b/.github/workflows/python-formatter.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   format:
+    if: contains(github.event.head_commit.message, '.py') 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -27,6 +28,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     needs: format
+    if: contains(github.event.head_commit.message, '.py') 
     steps: 
       - name: Checkout repo
         uses: actions/checkout@v4
