--- a/.github/workflows/source-build.yaml
+++ b/.github/workflows/source-build.yaml
@@ -5,9 +5,10 @@ on:
 
 jobs:
   source-build:
-    uses: vortexntnu/vortex-ci/.github/workflows/reusable-source-build.yaml@main
+    uses: vortexntnu/vortex-ci/.github/workflows/reusable-source-build.yaml@feat/add-input-gcc-version-reusable-source-build
     with:
       ros_distro: 'humble'
       os_name: 'ubuntu-22.04'
       ref: ${{ github.ref_name }}
       vcs_repo_file_url: 'https://raw.githubusercontent.com/vortexntnu/perception-auv/11-task-docker-dev-environment-on-orin/ros2.repos'
+      gcc_version: '13'
