--- a/perception_setup/config/zed_driver_params.yaml
+++ b/perception_setup/config/zed_driver_params.yaml
@@ -2,8 +2,8 @@
     ros__parameters:
 
         general:
-            camera_model: "zed2"
-            camera_name: "zed2" # usually overwritten by launch file
+            camera_model: "zed2i"
+            camera_name: "zed" # usually overwritten by launch file
             grab_resolution: 'HD720' # The native camera grab resolution. 'HD2K', 'HD1080', 'HD720', 'VGA', 'AUTO'
             grab_frame_rate: 60 # ZED SDK internal grabbing rate
             svo_file: "live" # usually overwritten by launch file
