Bug in yolo launch file
2024-10-29 16:43:44.365 ERROR /home/vortex/perception_isaac_integration_ws/src/perception-auv/submodules/isaac_ros_dnn_inference/isaac_ros_gxf_extensions/gxf_isaac_tensor_rt/gxf/extensions/tensor_rt/tensor_rt_inference.cpp@576: Failed to retrieve Tensor input_tensor
[component_container_mt-2] 2024-10-29 16:43:44.365 ERROR gxf/std/entity_executor.cpp@552: Failed to tick codelet  in entity: ESPDDYGYJL_inference code: GXF_FAILURE

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,12 @@
 [submodule "submodules/isaac_ros_nitros"]
 	path = submodules/isaac_ros_nitros
 	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_nitros.git
+[submodule "submodules/isaac_ros_common"]
+	path = submodules/isaac_ros_common
+	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_common.git
+[submodule "submodules/isaac_ros_nvblox"]
+	path = submodules/isaac_ros_nvblox
+	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_nvblox.git
+[submodule "submodules/isaac_ros_image_pipeline"]
+	path = submodules/isaac_ros_image_pipeline
+	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_image_pipeline.git
