--- a/perception_setup/config/nvblox_base.yaml
+++ b/perception_setup/config/nvblox_base.yaml
@@ -7,7 +7,7 @@
     # multi mapper
     mapping_type: "static_tsdf"  # ["static_tsdf", "static_occupancy"]
     connected_mask_component_size_threshold: 2000
-    global_frame: "world_ned"
+    global_frame: "odom"
 
     # Parameters governing frequency of different processing steps in the reconstruction pipeline.
     # Processing happens every n:th tick_period. <=0 means that no processing take place
@@ -29,7 +29,7 @@
     print_statistics_on_console_period_ms: 10000
 
     # esdf settings
-    esdf_mode: 1 # 0: 3d, 1: 2d
+    esdf_mode: 0 # 0: 3d, 1: 2d
     publish_esdf_distance_slice: true
     # color settings
     use_color: true
@@ -79,7 +79,7 @@
       # esdf integrator
       esdf_integrator_min_weight: 0.1
       esdf_integrator_max_site_distance_vox: 5.0
-      esdf_integrator_max_distance_m: 2.0
+      esdf_integrator_max_distance_m: 4.0
       # mesh integrator
       mesh_integrator_min_weight: 0.1
       mesh_integrator_weld_vertices: true
