--- a/perception_setup/config/zed_driver_params.yaml
+++ b/perception_setup/config/zed_driver_params.yaml
@@ -2,7 +2,7 @@
     ros__parameters:
 
         general:
-            camera_model: "zed2i"
+            camera_model: "zed2"
             camera_name: "zed" # usually overwritten by launch file
             grab_resolution: 'HD720' # The native camera grab resolution. 'HD2K', 'HD1080', 'HD720', 'VGA', 'AUTO'
             grab_frame_rate: 60 # ZED SDK internal grabbing rate
@@ -113,7 +113,7 @@
             qos_durability: 2 # '1': TRANSIENT_LOCAL - '2': VOLATILE
 
         sensors:
-            publish_imu_tf: true # [usually overwritten by launch file] enable/disable the IMU TF broadcasting
+            publish_imu_tf: false # [usually overwritten by launch file] enable/disable the IMU TF broadcasting
             sensors_image_sync: false # Synchronize Sensors messages with latest published video/depth message
             sensors_pub_rate: 200. # frequency of publishing of sensors data. MAX: 400. - MIN: grab rate
             qos_history: 1 # '1': KEEP_LAST - '2': KEEP_ALL
