--- a/perception_setup/config/nvblox_base.yaml
+++ b/perception_setup/config/nvblox_base.yaml
@@ -1,13 +1,13 @@
 /**:
   ros__parameters:
     # miscellaneous
-    voxel_size: 0.05
+    voxel_size: 0.10
     num_cameras: 1
     use_tf_transforms: true
     # multi mapper
     mapping_type: "static_tsdf"  # ["static_tsdf", "static_occupancy"]
     connected_mask_component_size_threshold: 2000
-    global_frame: "odom"
+    global_frame: "nvblox_height"
 
     # Parameters governing frequency of different processing steps in the reconstruction pipeline.
     # Processing happens every n:th tick_period. <=0 means that no processing take place
@@ -79,7 +79,7 @@
       # esdf integrator
       esdf_integrator_min_weight: 0.1
       esdf_integrator_max_site_distance_vox: 5.0
-      esdf_integrator_max_distance_m: 4.0
+      esdf_integrator_max_distance_m: 6.0
       # mesh integrator
       mesh_integrator_min_weight: 0.1
       mesh_integrator_weld_vertices: true
@@ -92,5 +92,5 @@
       mesh_bandwidth_limit_mbps: 999999925.0 # in mega bits per second
 
       esdf_slice_height: 0.0
-      esdf_slice_min_height: -0.1
-      esdf_slice_max_height: 0.3
+      esdf_slice_min_height: -0.5
+      esdf_slice_max_height: 0.5
