--- a/.gitmodules
+++ b/.gitmodules
@@ -12,22 +12,22 @@
 	url = https://github.com/vortexntnu/vortex-vkf.git
 [submodule "submodules/zed-ros2-wrapper"]
 	path = submodules/zed-ros2-wrapper
-	url = git@github.com:vortexntnu/zed-ros2-wrapper.git
+	url = https://github.com:vortexntnu/zed-ros2-wrapper.git
 [submodule "submodules/isaac_ros_object_detection"]
 	path = submodules/isaac_ros_object_detection
-	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_object_detection.git
+	url = https://github.com:NVIDIA-ISAAC-ROS/isaac_ros_object_detection.git
 [submodule "submodules/isaac_ros_dnn_inference"]
 	path = submodules/isaac_ros_dnn_inference
-	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_dnn_inference.git
+	url = https://github.com:NVIDIA-ISAAC-ROS/isaac_ros_dnn_inference.git
 [submodule "submodules/isaac_ros_nitros"]
 	path = submodules/isaac_ros_nitros
-	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_nitros.git
-[submodule "submodules/isaac_ros_common"]
-	path = submodules/isaac_ros_common
-	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_common.git
+	url = https://github.com:NVIDIA-ISAAC-ROS/isaac_ros_nitros.git
 [submodule "submodules/isaac_ros_nvblox"]
 	path = submodules/isaac_ros_nvblox
-	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_nvblox.git
+	url = https://github.com:NVIDIA-ISAAC-ROS/isaac_ros_nvblox.git
 [submodule "submodules/isaac_ros_image_pipeline"]
 	path = submodules/isaac_ros_image_pipeline
-	url = git@github.com:NVIDIA-ISAAC-ROS/isaac_ros_image_pipeline.git
+	url = https://github.com:NVIDIA-ISAAC-ROS/isaac_ros_image_pipeline.git
+[submodule "submodules/isaac_ros_common"]
+	path = submodules/isaac_ros_common
+	url = https://github.com/vortexntnu/isaac_ros_common.git
