--- a/.gitmodules
+++ b/.gitmodules
@@ -3,10 +3,13 @@
 	url = https://github.com/vortexntnu/vortex-aruco-detection.git
 [submodule "submodules/vortex-image-filtering"]
 	path = submodules/vortex-image-filtering
-	url = https://github.com/vortexntnu/vortex-image-filtering.git
-[submodule "submodules/vortex-blackfly-driver"]
-	path = submodules/vortex-blackfly-driver
-	url = https://github.com/vortexntnu/vortex-blackfly-driver.git
-[submodule "submodules/vortex-vkf"]
-	path = submodules/vortex-vkf
-	url = https://github.com/vortexntnu/vortex-vkf.git
+	url = git@github.com:vortexntnu/vortex-image-filtering.git
+[submodule "submodules/isaac_ros_common"]
+	path = submodules/isaac_ros_common
+	url = https://github.com/vortexntnu/isaac_ros_common.git
+[submodule "submodules/zed-ros2-wrapper"]
+	path = submodules/zed-ros2-wrapper
+	url = https://github.com/vortexntnu/zed-ros2-wrapper.git
+[submodule "submodules/vortex-msgs"]
+	path = submodules/vortex-msgs
+	url = https://github.com/vortexntnu/vortex-msgs.git
