--- a/perception_setup/config/zed_driver_params.yaml
+++ b/perception_setup/config/zed_driver_params.yaml
@@ -58,7 +58,7 @@
 
         pos_tracking:
             pos_tracking_enabled: true # True to enable positional tracking from start
-            pos_tracking_mode: "GEN_2" # Matches the ZED SDK setting: 'GEN_1', 'GEN_2'
+            pos_tracking_mode: "GEN_1" # Matches the ZED SDK setting: 'GEN_1', 'GEN_2'. NB! with GEN_2 we observed this https://community.stereolabs.com/t/visual-inertial-odometry-vio-drift/6281
             imu_fusion: true # enable/disable IMU fusion. When set to false, only the optical odometry will be used.
             publish_tf: true # [usually overwritten by launch file] publish `odom -> base_link` TF
             publish_map_tf: true # [usually overwritten by launch file] publish `map -> odom` TF
