attempting image build

--- a/.github/workflows/docker-export.yml
+++ b/.github/workflows/docker-export.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: where am i
         run: |
+          git submodule update --init --recursive
           cd submodules
           ls -la
           cd isaac_ros_common
