--- a/.github/workflows/docker-export.yml
+++ b/.github/workflows/docker-export.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Build docker images
         run: | 
-          ./submodules/isaac_ros_common/scripts/build_image_layers.sh -i aarch64.ros2_humble.main
+          ./submodules/isaac_ros_common/scripts/build_image_layers.sh -i aarch64.ros2_humble.main --no-cache
 
       - name: Get image name
         id: build_image
