--- a/.github/workflows/docker-export.yml
+++ b/.github/workflows/docker-export.yml
@@ -15,6 +15,9 @@ jobs:
     # Only run if new release from Semantic release
     runs-on: self-hosted
 
+    container:
+      image: ubuntu:22.04
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
