--- a/.github/workflows/docker-export.yml
+++ b/.github/workflows/docker-export.yml
@@ -31,11 +31,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       # Get current latest tag from the repository
-      - name: get latest tag
-        uses: actions-ecosystem/action-get-latest-tag@v1
-        id: get-latest-tag
-        with: 
-          semver_only: true
+      #- name: get latest tag
+      #  uses: actions-ecosystem/action-get-latest-tag@v1
+      #  id: get-latest-tag
+      #  with: 
+      #    semver_only: true
 
       - name: div
         run: |
@@ -47,14 +47,14 @@ jobs:
         run: | 
           ./submodules/isaac_ros_common/scripts/build_image_layers.sh -i aarch64.ros2_humble.main
 
-      - name: Get image name
-        id: build_image
-        run: |
-          echo "image_name=${TARGET_IMAGE_NAME}" >> $GITHUB_OUTPUT
+      #- name: Get image name
+      #  id: build_image
+      #  run: |
+      #    echo "image_name=${TARGET_IMAGE_NAME}" >> $GITHUB_OUTPUT
 
 
-      - name: Check image name
-        run: echo "The built image is ${{ steps.build_image.outputs.image_name }}"
+      #- name: Check image name
+      #  run: echo "The built image is ${{ steps.build_image.outputs.image_name }}"
 
 
       # Tag image
