--- a/.github/workflows/docker-export.yml
+++ b/.github/workflows/docker-export.yml
@@ -2,25 +2,25 @@ name: Build and Push Docker Image
 
 on:
   push:
-
-  #workflow_run:
-  # workflows: ["Semantic Release"]
-  #  types:
-  #   - completed
+    branches:
+      - feat/docker_export
 
 jobs:
   build-and-push:
-    # Only run if new release from Semantic release
     runs-on: self-hosted
     container:
       image: ubuntu:22.04
-      options: --privileged  # Optional: needed if running docker-in-docker (DinD)
+      options: --privileged -v /var/run/docker.sock:/var/run/docker.sock
 
     steps:
+      - name: Install Docker CLI
+        run: |
+          apt update
+          apt install -y docker.io
+
       - name: Check out repository
         uses: actions/checkout@v3
 
-      # Log into vortex container registry
       - name: Log into GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -28,43 +28,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Get current latest tag from the repository
-      #- name: get latest tag
-      #  uses: actions-ecosystem/action-get-latest-tag@v1
-      #  id: get-latest-tag
-      #  with: 
-      #    semver_only: true
-
       - name: whereami
         run: |
           ls -la
 
-      - name: div
+      - name: Init submodules and set TERM
         run: |
           git submodule update --init --recursive
           echo "TERM=xterm" >> $GITHUB_ENV
 
-
       - name: Build docker images
-        run: | 
+        run: |
           ./submodules/isaac_ros_common/scripts/build_image_layers.sh -i aarch64.ros2_humble.main
-
-      #- name: Get image name
-      #  id: build_image
-      #  run: |
-      #    echo "image_name=${TARGET_IMAGE_NAME}" >> $GITHUB_OUTPUT
-
-
-      #- name: Check image name
-      #  run: echo "The built image is ${{ steps.build_image.outputs.image_name }}"
-
-
-      # Tag image
-      #- name: Retag Docker image for GitHub Container Registry
-      #  run: |
-      #    docker tag auv-image:latest ghcr.io/${{ github.repository_owner }}/auv-image:${{ steps.get-latest-tag.outputs.tag }}
-
-      # Publish to container registry
-      #- name: Push Docker image to GitHub Container Registry
-      #  run: |
-      #    docker push ghcr.io/${{ github.repository_owner }}/auv-image:${{ steps.get-latest-tag.outputs.tag }}
