--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,6 @@
 #     pre-commit autoupdate
 #
 # See https://github.com/pre-commit/pre-commit
-
 repos:
   # Standard hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -40,32 +39,18 @@ repos:
       - id: ruff-format
       - id: ruff
         name: ruff-isort
-        args: [
-            "--select=I",
-            "--fix"
-            ]
+        args: ["--select=I", "--fix"]
       - id: ruff
         name: ruff-pyupgrade
-        args: [
-            "--select=UP",
-            "--fix"
-            ]
+        args: ["--select=UP", "--fix"]
       - id: ruff
         name: ruff-pydocstyle
-        args: [
-            "--select=D",
-            "--ignore=D100,D101,D102,D103,D104,D105,D106,D107,D401",
-            "--fix",
-            ]
+        args: ["--select=D", "--ignore=D100,D101,D102,D103,D104,D105,D106,D107,D401", "--fix"]
         stages: [pre-commit]
         pass_filenames: true
       - id: ruff
         name: ruff-check
-        args: [
-            "--select=F,PT,B,C4,T20,S,N",
-            "--ignore=T201,N812,B006,S101,S311,S607,S603",
-            "--fix"
-            ]
+        args: ["--select=F,PT,B,C4,T20,S,N", "--ignore=T201,N812,B006,S101,S311,S607,S603", "--fix"]
         stages: [pre-commit]
         pass_filenames: true
   # C++ hooks
@@ -74,12 +59,16 @@ repos:
     hooks:
       - id: clang-format
         args: [--style=file]
+  # YAML hooks
+  - repo: https://github.com/google/yamlfmt
+    rev: v0.16.0
+    hooks:
+      - id: yamlfmt
   # Spellcheck in comments and docs
   - repo: https://github.com/codespell-project/codespell
     rev: v2.3.0
     hooks:
       - id: codespell
         args: ['--write-changes', '--ignore-words-list=theses,fom']
-
 ci:
-    autoupdate_schedule: quarterly
+  autoupdate_schedule: quarterly
