--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = submodules/zed-ros2-wrapper
 	url = git@github.com:vortexntnu/zed-ros2-wrapper.git
 	branch = main
+[submodule "submodules/blackfly-driver"]
+	path = submodules/blackfly-driver
+	url = git@github.com:vortexntnu/vortex-blackfly-driver.git
+	branch = main
