--- a/.github/workflows/industrial-ci.yml
+++ b/.github/workflows/industrial-ci.yml
@@ -1,5 +1,4 @@
 name: Industrial CI
-
 on:
   push:
   workflow_dispatch:
@@ -8,3 +7,6 @@ on:
 jobs:
   call_reusable_workflow:
     uses: vortexntnu/vortex-ci/.github/workflows/reusable-industrial-ci.yml@main
+    with:
+      upstream_workspace: './dependencies.repos'
+      ros_repo: '["testing", "main"]'
