--- a/perception_setup/config/zed_driver_params.yaml
+++ b/perception_setup/config/zed_driver_params.yaml
@@ -1,10 +1,10 @@
 /**:
   ros__parameters:
     general:
-      camera_model: "zed2i"
+      camera_model: "zed2"
       camera_name: "zed" # usually overwritten by launch file
       grab_resolution: 'HD720' # The native camera grab resolution. 'HD2K', 'HD1080', 'HD720', 'VGA', 'AUTO'
-      grab_frame_rate: 60 # ZED SDK internal grabbing rate
+      grab_frame_rate: 30 # ZED SDK internal grabbing rate
       svo_file: "live" # usually overwritten by launch file
       svo_loop: false # Enable loop mode when using an SVO as input source
       svo_realtime: true # if true the SVO will be played trying to respect the original framerate eventually skipping frames, otherwise every frame will be processed respecting the `pub_frame_rate` setting
@@ -22,6 +22,7 @@
       #region_of_interest: '[[0.25,0.25],[0.75,0.25],[0.75,0.75],[0.25,0.75]]' # A polygon defining the ROI where the ZED SDK perform the processing ignoring the rest. Coordinates must be normalized to '1.0' to be resolution independent.
       #region_of_interest: '[[0.5,0.25],[0.75,0.5],[0.5,0.75],[0.25,0.5]]' # A polygon defining the ROI where the ZED SDK perform the processing ignoring the rest. Coordinates must be normalized to '1.0' to be resolution independent.
       sdk_verbose: 1
+      optional_opencv_calibration_file: "/home/vortex/orca_ws/src/perception-auv/perception_setup/config/zed2_underwater_calib.conf" # Optional path where the ZED SDK can find a file containing the calibration information of the camera computed by OpenCV. Read the ZED SDK documentation for more information: https://www.stereolabs.com/docs/api/structsl_1_1InitParameters.html#a9eab2753374ef3baec1d31960859ba19
     video:
       brightness: 4 # [DYNAMIC] Not available for ZED X/ZED X Mini
       contrast: 4 # [DYNAMIC] Not available for ZED X/ZED X Mini
@@ -40,7 +41,7 @@
       qos_durability: 2 # '1': TRANSIENT_LOCAL - '2': VOLATILE
     depth:
       depth_mode: 'NEURAL' # Matches the ZED SDK setting: 'NONE', 'PERFORMANCE', 'QUALITY', 'ULTRA', 'NEURAL' - Note: if 'NONE' all the modules that requires depth extraction are disabled by default (Pos. Tracking, Obj. Detection, Mapping, ...)
-      depth_stabilization: 1 # Forces positional tracking to start if major than 0 - Range: [0,100]
+      depth_stabilization: 0 # Forces positional tracking to start if major than 0 - Range: [0,100]
       openni_depth_mode: false # 'false': 32bit float [meters], 'true': 16bit unsigned int [millimeters]
       point_cloud_freq: 10.0 # [DYNAMIC] - frequency of the pointcloud publishing (equal or less to `grab_frame_rate` value)
       depth_confidence: 10 # [DYNAMIC]
@@ -53,8 +54,8 @@
       qos_reliability: 1 # '1': RELIABLE - '2': BEST_EFFORT -
       qos_durability: 2 # '1': TRANSIENT_LOCAL - '2': VOLATILE
     pos_tracking:
-      pos_tracking_enabled: true # True to enable positional tracking from start
-      pos_tracking_mode: "GEN_2" # Matches the ZED SDK setting: 'GEN_1', 'GEN_2'
+      pos_tracking_enabled: false # True to enable positional tracking from start
+      pos_tracking_mode: "GEN_1" # Matches the ZED SDK setting: 'GEN_1', 'GEN_2'. NB! with GEN_2 we observed this https://community.stereolabs.com/t/visual-inertial-odometry-vio-drift/6281
       imu_fusion: true # enable/disable IMU fusion. When set to false, only the optical odometry will be used.
       publish_tf: true # [usually overwritten by launch file] publish `odom -> base_link` TF
       publish_map_tf: true # [usually overwritten by launch file] publish `map -> odom` TF
