--- a/perception_setup/config/zed_driver_params.yaml
+++ b/perception_setup/config/zed_driver_params.yaml
@@ -22,7 +22,7 @@
       #region_of_interest: '[[0.25,0.25],[0.75,0.25],[0.75,0.75],[0.25,0.75]]' # A polygon defining the ROI where the ZED SDK perform the processing ignoring the rest. Coordinates must be normalized to '1.0' to be resolution independent.
       #region_of_interest: '[[0.5,0.25],[0.75,0.5],[0.5,0.75],[0.25,0.5]]' # A polygon defining the ROI where the ZED SDK perform the processing ignoring the rest. Coordinates must be normalized to '1.0' to be resolution independent.
       sdk_verbose: 1
-      optional_opencv_calibration_file: "/home/vortex/orca_ws/src/perception-auv/perception_setup/config/zed2_underwater_calib.conf" # Optional path where the ZED SDK can find a file containing the calibration information of the camera computed by OpenCV. Read the ZED SDK documentation for more information: https://www.stereolabs.com/docs/api/structsl_1_1InitParameters.html#a9eab2753374ef3baec1d31960859ba19
+      optional_opencv_calibration_file: "/home/vortex/orca_ws/src/perception-auv/perception_setup/config/zed2_underwater_calib.yaml" # Optional path where the ZED SDK can find a file containing the calibration information of the camera computed by OpenCV. Read the ZED SDK documentation for more information: https://www.stereolabs.com/docs/api/structsl_1_1InitParameters.html#a9eab2753374ef3baec1d31960859ba19
     video:
       brightness: 4 # [DYNAMIC] Not available for ZED X/ZED X Mini
       contrast: 4 # [DYNAMIC] Not available for ZED X/ZED X Mini
@@ -56,9 +56,9 @@
     pos_tracking:
       pos_tracking_enabled: false # True to enable positional tracking from start
       pos_tracking_mode: "GEN_1" # Matches the ZED SDK setting: 'GEN_1', 'GEN_2'. NB! with GEN_2 we observed this https://community.stereolabs.com/t/visual-inertial-odometry-vio-drift/6281
-      imu_fusion: true # enable/disable IMU fusion. When set to false, only the optical odometry will be used.
-      publish_tf: true # [usually overwritten by launch file] publish `odom -> base_link` TF
-      publish_map_tf: true # [usually overwritten by launch file] publish `map -> odom` TF
+      imu_fusion: false # enable/disable IMU fusion. When set to false, only the optical odometry will be used.
+      publish_tf: false # [usually overwritten by launch file] publish `odom -> base_link` TF
+      publish_map_tf: false # [usually overwritten by launch file] publish `map -> odom` TF
       base_frame: "base_link" # usually overwritten by launch file
       map_frame: "map"
       odometry_frame: "odom"
