refactor: restructure repo and migrate dependencies to vcs

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,7 @@
+# To install:
+#
+#     pip install pre-commit
+#
 # To use:
 #
 #     pre-commit run -a
@@ -11,10 +15,11 @@
 #     pre-commit autoupdate
 #
 # See https://github.com/pre-commit/pre-commit
+
 repos:
   # Standard hooks
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
+    rev: v6.0.0
     hooks:
       - id: check-added-large-files
       - id: check-ast
@@ -34,41 +39,81 @@ repos:
       - id: requirements-txt-fixer
   # Python hooks
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.12.2
+    rev: v0.14.5
     hooks:
       - id: ruff-format
       - id: ruff
         name: ruff-isort
-        args: ["--select=I", "--fix"]
+        args: [
+            "--select=I",
+            "--fix"
+            ]
       - id: ruff
         name: ruff-pyupgrade
-        args: ["--select=UP", "--fix"]
+        args: [
+            "--select=UP",
+            "--fix"
+            ]
       - id: ruff
         name: ruff-pydocstyle
-        args: ["--select=D", "--ignore=D100,D101,D102,D103,D104,D105,D106,D107,D401", "--fix"]
+        args: [
+            "--select=D",
+            "--ignore=D100,D101,D102,D103,D104,D105,D106,D107,D401",
+            "--fix",
+            ]
         stages: [pre-commit]
         pass_filenames: true
       - id: ruff
         name: ruff-check
-        args: ["--select=F,PT,B,C4,T20,S,N", "--ignore=T201,N812,B006,S101,S311,S607,S603", "--fix"]
+        args: [
+            "--select=F,PT,B,C4,T20,S,N",
+            "--ignore=T201,N812,B006,S101,S311,S607,S603",
+            "--fix"
+            ]
         stages: [pre-commit]
         pass_filenames: true
   # C++ hooks
   - repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: v20.1.7
+    rev: v21.1.5
     hooks:
       - id: clang-format
         args: [--style=file]
-  # YAML hooks
-  - repo: https://github.com/google/yamlfmt
-    rev: v0.17.2
+  - repo: local
     hooks:
-      - id: yamlfmt
+      - id: ament_cppcheck
+        name: ament_cppcheck
+        description: Static code analysis of C/C++ files.
+        entry: env AMENT_CPPCHECK_ALLOW_SLOW_VERSIONS=1 ament_cppcheck
+        language: system
+        files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
+        exclude: (^|/)(test|tests)/.*  # exclude test dirs since ament_cppcheck misparses GTest macros and throws false syntax errors
+  - repo: local
+    hooks:
+      - id: ament_cpplint
+        name: ament_cpplint
+        description: Static code analysis of C/C++ files.
+        entry: ament_cpplint
+        language: system
+        files: \.(h\+\+|h|hh|hxx|hpp|cuh|c|cc|cpp|cu|c\+\+|cxx|tpp|txx)$
+        args: [
+          "--linelength=120",
+          "--filter=-whitespace/newline,-legal/copyright,-build/include_order" # ignore build/include_order since it conflicts with .clang-format
+        ]
+  # CMake hooks
+  - repo: local
+    hooks:
+      - id: ament_lint_cmake
+        name: ament_lint_cmake
+        description: Check format of CMakeLists.txt files.
+        entry: ament_lint_cmake
+        language: system
+        files: CMakeLists\.txt$
   # Spellcheck in comments and docs
   - repo: https://github.com/codespell-project/codespell
     rev: v2.4.1
     hooks:
       - id: codespell
-        args: ['--write-changes', '--ignore-words-list=theses,fom']
+        args: ['--write-changes', '--ignore-words-list=theses,fom,NED,ENU']
+
 ci:
-  autoupdate_schedule: quarterly
+    autoupdate_schedule: quarterly
