--- a/.github/workflows/industrial-ci.yml
+++ b/.github/workflows/industrial-ci.yml
@@ -8,5 +8,5 @@ jobs:
   call_reusable_workflow:
     uses: vortexntnu/vortex-ci/.github/workflows/reusable-industrial-ci.yml@main
     with:
-      upstream_workspace: './dependencies.repos'
+      upstream_workspace: './dependencies.https.repos'
       ros_repo: '["testing", "main"]'
