--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -4,5 +4,5 @@ on:
     branches:
       - main
 jobs:
-  call_reusable_workflow:
+  semantic-release:
     uses: vortexntnu/vortex-ci/.github/workflows/reusable-semantic-release.yml@main
